--- a/contact.html
+++ b/contact.html
@@ -18,16 +18,23 @@
             Gabriel Loquin
         </h1>
         <nav>
-            <a class="navlink" href="#">Accueil</a>
+            <a class="navlink" href="index.html">Accueil</a>
             <a class="navlink" href="sae.html">SAE</a>
-            <a class="navlink" href="contact.html">Contact</a>
+            <a class="navlink" href="#">Contact</a>
         </nav>
     </header>
 
     <!-- Contenu -->
     <main>
-        <h1 class="page-title">Bienvenue sur mon Portfolio</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex doloremque laboriosam id consequatur ratione optio, esse alias repellendus quod eos dolor corrupti pariatur corporis doloribus accusamus unde! Repellat, non labore.</p>
+        <h1 class="page-title">Contact</h1>
+        <p class="page-subtitle">Afin de me contacter, merci d'utiliser les liens suivants.</p>
+
+        <!-- Conteneurs et liens -->
+        <div class="container">
+            <btn onclick="copyemail()" class="box email-box">E-Mail</btn>
+            <a href="https://www.linkedin.com/in/glqn/" target="_blank" class="box lkd-box">LinkedIn</a>
+            <a href="https://github.com/im-gabrichi" target="_blank" class="box github-box">GitHub</a>
+        </div>
     </main>
 
     <!-- Pied de page -->
