--- a/sae.html
+++ b/sae.html
@@ -18,15 +18,15 @@
             Gabriel Loquin
         </h1>
         <nav>
-            <a class="navlink" href="#">Accueil</a>
-            <a class="navlink" href="sae.html">SAE</a>
-            <a class="navlink" href="contact.html">Contact</a>
+            <a href="index.html">Accueil</a>
+            <a href="#">SAE</a>
+            <a href="contact.html">Contact</a>
         </nav>
     </header>
 
     <!-- Contenu -->
     <main>
-        <h1 class="page-title">Bienvenue sur mon Portfolio</h1>
+        <h1 class="page-title">SAE</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex doloremque laboriosam id consequatur ratione optio, esse alias repellendus quod eos dolor corrupti pariatur corporis doloribus accusamus unde! Repellat, non labore.</p>
     </main>
 
