template pages compétences

--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
         </h1>
         <nav>
             <a class="navlink" href="index.html">Accueil</a>
-            <a class="navlink" href="sae.html">SAE</a>
+            <a class="navlink" href="sae.html">Compétences</a>
             <a class="navlink" href="#">Contact</a>
         </nav>
     </header>
@@ -31,9 +31,9 @@
 
         <!-- Conteneurs et liens -->
         <div class="container">
-            <btn onclick="copyemail()" class="box email-box">E-Mail</btn>
-            <a href="https://www.linkedin.com/in/glqn/" target="_blank" class="box lkd-box">LinkedIn</a>
-            <a href="https://github.com/im-gabrichi" target="_blank" class="box github-box">GitHub</a>
+            <btn onclick="copyemail()" class="box db-box">E-Mail</btn>
+            <a href="https://www.linkedin.com/in/glqn/" target="_blank" class="box lb-box">LinkedIn</a>
+            <a href="https://github.com/im-gabrichi" target="_blank" class="box beige-box">GitHub</a>
         </div>
     </main>
 
