--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </h1>
         <nav>
             <a class="navlink" href="#">Accueil</a>
-            <a class="navlink" href="sae.html">SAE</a>
+            <a class="navlink" href="sae.html">Compétences</a>
             <a class="navlink" href="contact.html">Contact</a>
         </nav>
     </header>
