--- a/sae.html
+++ b/sae.html
@@ -19,15 +19,22 @@
         </h1>
         <nav>
             <a href="index.html">Accueil</a>
-            <a href="#">SAE</a>
+            <a href="#">Compétences</a>
             <a href="contact.html">Contact</a>
         </nav>
     </header>
 
     <!-- Contenu -->
     <main>
-        <h1 class="page-title">SAE</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex doloremque laboriosam id consequatur ratione optio, esse alias repellendus quod eos dolor corrupti pariatur corporis doloribus accusamus unde! Repellat, non labore.</p>
+        <h1 class="page-title">Compétences</h1>
+        <p class="page-subtitle">Cliquez sur une des compétences pour obtenir les détails de chacune.</p>
+        
+        <!-- Conteneurs et liens -->
+        <div class="container">
+            <a href="comp/traiter.html" class="box db-box">Traiter</a>
+            <a href="comp/analyser.html" class="box lb-box">Analyser</a>
+            <a href="comp/valoriser.html" class="box beige-box">Valoriser</a>
+        </div>
     </main>
 
     <!-- Pied de page -->
