--- a/comp/analyser.html
+++ b/comp/analyser.html
@@ -34,7 +34,12 @@
     
         <div class="paragraph">
             <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa ducimus deleniti necessitatibus modi numquam perferendis dolor sed earum sunt officiis laboriosam consequuntur, exercitationem corporis impedit vero optio voluptate aspernatur iure?
+                Lors de la SAE-106, nous avons étudié des données, et avant de les traiter, il nous a fallu étudier leurs caractéristiques. Pendant celle-ci nous avons travaillé avec le CPIE de Belle-Île-en-mer afin de réaliser une enquête
+                afin de connaitre leur impact sur l'île. Le projet s'est déroulé en deux phases majeures. Nous avons premièrement réalisé l'enquête, c'est-à-dire toutes les questions, l'ordre dans lequel elles passaient, faire en sorte que les réponses ne soient pas biaisées, etc.
+                <br><br>
+                Pendant la deuxième partie, nous avons étudié les réponses à cette enquête. Nous avons réalisé des études univariées, mais également des bivariées, avec croisement de variables. La manière pour les étudier n'est pas la même selon les caractéristiques des variables.
+                En effet, nous avons pris le temps d'étudier si les variables, si elles étaient quantitatives, étaient discrètes ou continues, et si elles étaient qualitatives, étaient nominales ou ordinales. Etudier les caractéristiques des variables nous a été très important
+                avant de prendre le temps de faire l'étude.
             </p>
         </div>
 
@@ -43,7 +48,11 @@
 
         <div class="paragraph">
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum maxime corrupti quidem culpa adipisci et laudantium aut ipsum. Error soluta commodi autem corporis provident porro aliquam sed voluptatem tempore rem?
+                Pendant cette même SAE-106, il nous a fallu, pendant cette même deuxième phase, nettoyer les données. En effet, sans données propres et préparées, alors les réponses étaient inexploitables. Il faut remettre le contexte, des gens ont répondu à une enquête et pas toujours de la meilleure des manières.
+                J'ai donc du faire en sorte de réadapter les réponses des répondants afin de pouvoir faire en sorte que les chiffres ne soient pas faussés. 
+                <br><br>
+                Par exemple, une des questions posées dans l'enquête était : "Comment avez vous entendu parler de la CPIE de Belle-Île-en-mer ?". Il y avait plusieurs propositions
+                de réponses, dont une était "à l'école", et une autre était "autre", permettant au répondant d'entrer du texte libre. Un des répondants a répondu "en cours", j'ai donc du faire en sorte corriger sa réponse, et ce pour plusieurs dizaines de répondants. Sans cette étape, les chiffres obtenus auraient été faux.
             </p>
         </div>
 
@@ -52,35 +61,30 @@
 
         <div class="paragraph">
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum maxime corrupti quidem culpa adipisci et laudantium aut ipsum. Error soluta commodi autem corporis provident porro aliquam sed voluptatem tempore rem?
-            </p>
-        </div>
-
-        <!-- AC12.04 -->
-        <h4 class="page-title" style="color: #e1e7ef;">AC12.04 : Comprendre l'intérêt des synthèses numériques et graphiques pour mettre en évidence des liaisions entre variables</h4> 
-
-        <div class="paragraph">
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum maxime corrupti quidem culpa adipisci et laudantium aut ipsum. Error soluta commodi autem corporis provident porro aliquam sed voluptatem tempore rem?
+                Les synthèses numériques et graphiques sont très importantes. C'est ce qui permet au lecteur de mieux comprendre certaines données, mieux comprendre le message que veut faire passer un rapport. Pendant la SAE-103, nous avons eu à critiquer un rapport et proposer des analyses supplémentaires, dans laquelle
+                nous avons étudié le sujet suivant : "Le trajet médian domicile-travail augmente de moitié en vingt ans pour les habitants du rural". Les données provenaient de l'INSEE.
+                <br><br>
+                En ce qui concerne les analyses supplémentaires, nous avons réalisé plusieurs graphiques sous Excel.
+                <br><br>
+                <img src="../src/sae103-1.png" style="width: 70%; display: block; margin: 0 auto;">
+                <p class="page-subtitle">Population active en emploi résidant dans le rural</p>
+                <br><br>
+                <img src="../src/sae103-2.png" style="width: 70%; display: block; margin: 0 auto;">
+                <p class="page-subtitle">Distance domicile-travail des actifs en emploi résidant dans le rural selon la taille de l'aire d'attraction des villes (AAV) de résidence</p>
+                Afin d'illustrer nos propositions, il était primordial d'utiliser des graphiques pour appuyer nos propos.
             </p>
         </div>
 
         <!-- AC12.05 -->
-        <h4 class="page-title" style="color: #e1e7ef;">AC12.05 : Comprendre l'intérêt de l'utilisation d'un modèle probabiliste</h4> 
-
-        <div class="paragraph">
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum maxime corrupti quidem culpa adipisci et laudantium aut ipsum. Error soluta commodi autem corporis provident porro aliquam sed voluptatem tempore rem?
-            </p>
-        </div>
-
-
-        <!-- AC12.06 -->
         <h4 class="page-title" style="color: #e1e7ef;">AC12.06 : Appréhender la notion de fluctuation d'échantillonnage, notamment à l'aide de simulations probabilistes</h4> 
 
         <div class="paragraph">
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum maxime corrupti quidem culpa adipisci et laudantium aut ipsum. Error soluta commodi autem corporis provident porro aliquam sed voluptatem tempore rem?
+                Lors de la SAE-202 : "Estimation par échantillonnage", nous avons utilisé et comparé plusieurs modèles probabilistes. Nous avons récupéré un fichier de données et travaillé sur R.
+                <br><br>
+                <img src="../src/sae202.png" style="width: 70%; display: block; margin: 0 auto;">
+                <p class="page-subtitle">Graphique réalisé sur R</p>
+                Ici, nous avons un graphique nous permettant de visualiser une densité de probabilité.
             </p>
         </div>
 
