--- a/comp/traiter.html
+++ b/comp/traiter.html
@@ -47,21 +47,19 @@
             </p>
         </div>
 
-        <!-- AC11.02 -->
-        <h4 class="page-title" style="color: #e1e7ef;">AC11.02 : Respecter les formalismes de notation</h4> 
-
-        <div class="paragraph">
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum maxime corrupti quidem culpa adipisci et laudantium aut ipsum. Error soluta commodi autem corporis provident porro aliquam sed voluptatem tempore rem?
-            </p>
-        </div>
-
         <!-- AC11.03 -->
         <h4 class="page-title" style="color: #e1e7ef;">AC11.03 : Connaitre la syntaxe des langages et savoir l'utiliser</h4> 
 
         <div class="paragraph">
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum maxime corrupti quidem culpa adipisci et laudantium aut ipsum. Error soluta commodi autem corporis provident porro aliquam sed voluptatem tempore rem?
+                En décembre 2024, lors de la SAE-102, il m'a été requis de programmer du code dans le langage Python. Celle-ci consistait à traiter des données dans des fichiers CSV et TXT.
+                Mais également, pendant la SAE-206, il m'a fallu programmer beaucoup de code en VBA. Travaillant avec l'AP-HP sur le projet ComPaRe, je ne peux pas partager de ligne de codes, mais
+                il y a une syntaxe à respecter pour être sûr que le programme fonctionne bien. Celui-ci nous a permis de créer la fiche synthèse que le commanditaire demandait.
+                <br><br>
+                Voici un programme provenant de la SAE :
+                <br><br>
+                <img src="../src/sae102.png" style="display: block; margin: 0 auto;">
+                <p class="page-subtitle">Un des programmes de la SAE-102</p>
             </p>
         </div>
 
@@ -70,7 +68,12 @@
 
         <div class="paragraph">
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum maxime corrupti quidem culpa adipisci et laudantium aut ipsum. Error soluta commodi autem corporis provident porro aliquam sed voluptatem tempore rem?
+                Egalement lors de la SAE-206, nous avons reçu plusieurs fichiers de données d'extension CSV, contenant les réponses à des questionnaires. C'est sur ces fichiers que nous avons travaillé.
+                Il nous a fallu bien comprendre comment les données étaient structurées. Chaque fichier CSV correspondait à un questionnaire, avec en colonne la réponse à une question, et en ligne, l'identifiant
+                du patient / répondant.
+                <br><br>
+                Cependant, les fichiers CSV étant assez limités dans notre projet, nous avons décidé de tout convertir en fichier xlsm, afin de pouvoir ajouter des macros dans les fichiers. Cela prouve que nous 
+                maitrisons la structure de données dans laquelle nous avons travaillé.
             </p>
         </div>
 
@@ -79,7 +82,17 @@
 
         <div class="paragraph">
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum maxime corrupti quidem culpa adipisci et laudantium aut ipsum. Error soluta commodi autem corporis provident porro aliquam sed voluptatem tempore rem?
+                J'ai eu l'occasion de mettre en pratique la compétence AC11.05 lors de la SAE-203, où j'ai utilisé une des structures algorithmiques de base. Dans cette SAE, moi ainsi que mon binôme avons récupéré
+                un fichier CSV sur Internet afin d'en réaliser une étude statistique descriptive. Nous avons eu l'occasion de récupérer un fichier CSV ayant pour objet les modèles d'automobiles puis de le nettoyer 
+                et n'y laisser uniquement ce qui allait nous intéresser pour l'étude statistique.
+                <br><br>
+                Pour comparaison, voici un extrait du fichier original, suivi d'un extrait du fichier modifié :
+                <br><br>
+                <img src="../src/sae203_OG.png" style="width: 70%; display: block; margin: 0 auto;">
+                <p class="page-subtitle">Extrait du fichier Excel original</p>
+                <br><br>
+                <img src="../src/sae203-NEW.png" style="width: 70%; display: block; margin: 0 auto;">
+                <p class="page-subtitle">Extrait du fichier Excel modifié</p>
             </p>
         </div>
 
@@ -89,7 +102,16 @@
 
         <div class="paragraph">
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum maxime corrupti quidem culpa adipisci et laudantium aut ipsum. Error soluta commodi autem corporis provident porro aliquam sed voluptatem tempore rem?
+                Lors de la SAE-206, nous avons dû réaliser des programmes en VBA, comme précisé plus tôt. D'un côté où cette décision a été assez instinctive pour mon groupe, il est fort important de préciser
+                que l'AP-HP n'avait pas compris que nous allions créer du code VBA lorsque nous leurs avions dit que nous allions travailler sur Excel. En effet, il y a eu malentendu et ils ont pensé que nous allions
+                faire de simples formules Excel pour calculer les scores des patients. Bien que cela nous ait été utile pour pouvoir programmer avec l'esprit clair, ce n'est pas ce qu'ils voulaient.
+                <br><br>
+                Lors d'une réunion avec le commanditaire, nous leurs avons bien expliqué que nous avions conscience de l'intérêt de la programmation plutôt que de réaliser des formules sur Excel manuellement.
+                Nous leurs avons ainsi expliqué notre choix : VBA. Déjà présent dans Excel, extrêmement simple de générer du PDF, mais aussi possibilité de directement créer des boutons dans le fichier Excel
+                afin de lancer notre programme. Ainsi, ils ont compris que nous avions conscience de l'intérêt de programmer : il n'y avait pas moyen de faire autrement.
+                <br><br>
+                <img src="../src/rdv206.png" style="width: 70%; display: block; margin: 0 auto;">
+                <p class="page-subtitle">Diapositive présenté à l'AP-HP expliquant notre choix pour VBA</p>
             </p>
         </div>
 
