--- a/comp/valoriser.html
+++ b/comp/valoriser.html
@@ -34,34 +34,34 @@
     
         <div class="paragraph">
             <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa ducimus deleniti necessitatibus modi numquam perferendis dolor sed earum sunt officiis laboriosam consequuntur, exercitationem corporis impedit vero optio voluptate aspernatur iure?
+                Lors de la SAE-206, nous avons réalisé un projet de fiche patient pour l'AP-HP, plus précisément pour le projet ComPaRe. Il est basé sur des patients qui répondent à un questionnaire, puis des calculs sont faits pour les situer
+                par rapport au reste des personnes qui souffrent de la même maladie.
+                <br><br>
+                Dans cette fiche, on affiche des curseurs, affichant des moyennes. Cependant, il faut faire attention à ce que certains chiffre ne soient pas biaisés.
+                <br><br>
+                <img src="../src/sae206-1.png" style="width: 70%; display: block; margin: 0 auto;">
+                <p class="page-subtitle">Extrait de la fiche patient</p>
+                Par exemple, ci-dessus, on constate un diagramme circulaire montrant une répartition des sexes. Il faut faire attention à ce que certaines répartitions ne soient pas biaisées, c'est-à-dire qu'une partie ne soit pas surreprésentée alors qu'elle ne devrait pas l'être.
             </p>
         </div>
 
+        <!-- AC13.06 -->
+        <h4 class="page-title" style="color: #e1e7ef;">AC13.06 : Mesurer l'importance d'une expression précise et nuancée dans la communication en français et dans une langue étrangère des résultats</h4> 
+        <p class="page-subtitle">La section ci-dessous comprend cet apprentissage également.</p>
+        <br>
+        
         <!-- AC13.02 -->
         <h4 class="page-title" style="color: #e1e7ef;">AC13.02 : Identifier l'importance de contextualiser ses données</h4> 
 
         <div class="paragraph">
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum maxime corrupti quidem culpa adipisci et laudantium aut ipsum. Error soluta commodi autem corporis provident porro aliquam sed voluptatem tempore rem?
-            </p>
-        </div>
-
-        <!-- AC13.03 -->
-        <h4 class="page-title" style="color: #e1e7ef;">AC13.03 : Mesurer l'importance de mettre en évidence des résultats clés par l'utilisation d'indicateurs pertinents</h4> 
-
-        <div class="paragraph">
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum maxime corrupti quidem culpa adipisci et laudantium aut ipsum. Error soluta commodi autem corporis provident porro aliquam sed voluptatem tempore rem?
-            </p>
-        </div>
-
-        <!-- AC13.04 -->
-        <h4 class="page-title" style="color: #e1e7ef;">AC13.04 : Lors de la restitution de résultats, mesurer l'importance d'expliciter également la démarche suivie</h4> 
-
-        <div class="paragraph">
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum maxime corrupti quidem culpa adipisci et laudantium aut ipsum. Error soluta commodi autem corporis provident porro aliquam sed voluptatem tempore rem?
+                Pendant la SAE-105, nous avons réalisé une étude sur le muscadet et réfléchi sur sa potentielle vente en Chine. Une étude de marché a été faite, et nous en avons tiré des conclusions.
+                <br><br>
+                Cependant, avant de les tirer, il a fallu tout recontextualiser.
+                <br><br>
+                <img src="../src/sae104105-1.png" style="width: 70%; display: block; margin: 0 auto;">
+                <p class="page-subtitle">Extrait de la présentation de la SAE-104-105</p>
+                Par exemple, ici, nous avons étudié les tendances de consommation de vin en Chine, et nous avons vu que d'apparence, elle pouvait baisser, mais qu'en réalité les jeunes aimaient beaucoup en boire.
             </p>
         </div>
 
@@ -70,17 +70,13 @@
 
         <div class="paragraph">
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum maxime corrupti quidem culpa adipisci et laudantium aut ipsum. Error soluta commodi autem corporis provident porro aliquam sed voluptatem tempore rem?
-            </p>
-        </div>
-
-
-        <!-- AC13.06 -->
-        <h4 class="page-title" style="color: #e1e7ef;">AC13.06 : Mesurer l'importance d'une expression précise et nuancée dans la communication en français et dans une langue étrangère des résultats</h4> 
-
-        <div class="paragraph">
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum maxime corrupti quidem culpa adipisci et laudantium aut ipsum. Error soluta commodi autem corporis provident porro aliquam sed voluptatem tempore rem?
+                Durant cette même SAE, nous avons réalisé plusieurs graphiques permettant au jury de bien visualiser l'intérêt de vendre du vin en Chine.
+                <img src="../src/sae104105-2.png" style="width: 70%; display: block; margin: 0 auto;">
+                <p class="page-subtitle">Extrait de la présentation de la SAE-104-105</p>
+                Ici, le graphique présente l'explosion du marché des fruits de mer en Chine. Le diagramme en barre permet de bien comprendre que la Chine représente un tiers (soit une majeure partie) du marché. Nous avons mis ceci
+                en lien avec le muscadet, avec qui les fruits de mer sont habituellement mis ensemble.
+                <br><br>
+                Il était essentiel de créer une visualisation de données pour que le jury comprenne qu'il y a une réelle opportunité.
             </p>
         </div>
 
