--- a/index.html
+++ b/index.html
@@ -27,7 +27,13 @@
     <!-- Contenu -->
     <main>
         <h1 class="page-title">Bienvenue sur mon Portfolio</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex doloremque laboriosam id consequatur ratione optio, esse alias repellendus quod eos dolor corrupti pariatur corporis doloribus accusamus unde! Repellat, non labore.</p>
+        <p>
+            <p class="page-subtitle">Je suis Gabriel Loquin, étudiant à l'IUT de Vannes dans le département Sciences des Données (ex-STID).</p>  
+            <br><br>
+            Afin de connaître mes compétences et savoir ce que je sais faire, cliquez <a href="sae.html" style="text-decoration: none;">ici</a>.
+            <br><br>
+            Si vous souhaitez savoir par quel moyen me contacter, cliquez <a href="contact.html" style="text-decoration: none;">là</a>.
+        </p>
     </main>
 
     <!-- Pied de page -->
